Add certification and update skill set

--- a/myresume.html
+++ b/myresume.html
@@ -507,16 +507,45 @@ p {
                 </div>  
             </section><!--//skills-section-->
             <br/>
+            <section class="skills-section section">
+                <h2 class="section-title"><i class="fa fa-certificate"></i>Certifications</h2>
+                <br/>
+                <div class="item">
+                    <img src="images/psmi.png" style="float: left" height="100px">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">PSM I</h3>
+                            <div class="time">Feb 1-2, 2020</div>
+                        </div>
+                        <div class="company">Scrum.org</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p><span class="project-title">Score:</span> 95%</p>
+                    </div><!--//details-->
+                    <div class="details">
+                        <p><span class="project-title">URL:</span>
+                            <a href="https://www.scrum.org/user/622804">https://www.scrum.org/user/622804</a>
+                        </p>
+                    </div><!--//details-->
+                    <div class="details">
+                        <p>The Professional Scrum Master I (PSM I) certification demonstrates a fundamental level of Scrum mastery. PSM I certificate holders prove that they understand Scrum as described in the Scrum Guide and how to apply Scrum in Scrum Teams.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+            </section><!--//skills-section-->
+            <br/>
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills Set</h2>
                 <!-- <div class="intro">
                     <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
                 </div> --><!--//intro-->
                 <div class="item">
+                    <span class="project-title"><b>Programming</b></span>
+                </div><!--//item-->
+                <div class="item">
                     <span class="skills-title company">Practices</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">CodeIgniter, Laravel, Yii</span>
+                    <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">CodeIgniter, Laravel, Symfony, Yii</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Backend Micro Frameworks</span>: <span class="project-tagline">Lumen, Slim</span>
@@ -525,25 +554,28 @@ p {
                     <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>: <span class="project-tagline">Blade, Twig, Mustache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Javascript Frameworks</span>: <span class="project-tagline">jQuery, React</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
+                    <span class="skills-title company">Javascript Frameworks</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Design Patterns</span>: <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy, Command | (Structural) Adapter, Composite, Facade</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Payment Gateways</span>: <span class="project-tagline">CCAvenue, PayPal, Stripe, Wirecard</span>
+                    <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="project-title"><b>Architectural</b></span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>: <span class="project-tagline">REST, SOAP, WSDL</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Caching Techniques</span>: <span class="project-tagline">APC, Memcache, XCache</span>
+                    <span class="skills-title company">Caching</span>: <span class="project-tagline">APC, Memcache, XCache, Varnish</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Operating System</span>: <span class="project-tagline">Linux, Windows</span>
@@ -558,35 +590,38 @@ p {
                     <span class="skills-title company">VCS</span>: <span class="project-tagline">Git</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation, Docker</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Methodologies</span>: <span class="project-tagline">Agile Scrum, Kanban</span>
+                    <span class="skills-title company">Queuing</span>: <span class="project-tagline">Gearman, RabbitMQ</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
+                    <span class="skills-title company">Others</span>: <span class="project-tagline">Docker</span>
+                </div><!--//item-->
+                <div class="item">
+                        <span class="project-title"><b>Others</b></span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Methodologies</span>: <span class="project-tagline">Agile Scrum, Kanban</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Payment Gateways</span>: <span class="project-tagline">CCAvenue, PayPal, Stripe, Wirecard</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">API Development Environment</span>: <span class="project-tagline">Postman, RESTClient</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">IDE / Editor</span>: <span class="project-tagline">EmEditor, NetBeans, Nano, Notepad++, Sublime Text, Vim, Visual Studio, PhpStorm</span>
+                    <span class="skills-title company">IDE / Editor</span>: <span class="project-tagline">EmEditor, NetBeans, Nano, Notepad, Sublime Text, Vim, Visual Studio, PhpStorm</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">DB Tools</span>: <span class="project-tagline">phpMyAdmin, DBeaver</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Gearman, Meld, Word, Xdebug (PhpStorm), PHP-DI</span>
+                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver</span>
                 </div><!--//item-->
             </section><!--//section-->
             <section class="section projects-section">
-                <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
+                <h2 class="section-title"><i class="fa fa-tasks"></i>Projects</h2>
                 <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
                 <div class="item">
                     <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">Avado</a></span>:
@@ -720,8 +755,3 @@ jQuery(document).ready(function($) {
 </script>
 </body>
 </html>
-<!-- I am 29 years old Single. Primarily a Php developer, efficient with HTML,JS,CSS,etc.(Full Stack) also. Looking for a job in Europe.
-
-My Nationality is Indian. I am very fluent with English. Hope to hear from you soon.
-
-You can also check my resume here: https://udaykarkera.github.io/myresume.html -->
