--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>6+ Years Exp</h4>
+                <h4>6.5+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -404,7 +404,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 6 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 6.5 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -542,7 +542,7 @@ p {
                     <span class="project-title"><b>Programming</b></span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Practices</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization</span>
+                    <span class="skills-title company">Practises</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">CodeIgniter, Laravel, Symfony, Yii</span>
@@ -569,13 +569,16 @@ p {
                     <span class="project-title"><b>Architectural</b></span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL</span>
+                    <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL, Elasticsearch</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Web Services</span>: <span class="project-tagline">REST, SOAP, WSDL</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Caching</span>: <span class="project-tagline">APC, Memcache, XCache, Varnish</span>
+                    <span class="skills-title company">Caching</span>: <span class="project-tagline">APC, Memcache, XCache, HTTP caching, Reverse proxy (Varnish)</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Security</span>: <span class="project-tagline">DoS, DDos</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Operating System</span>: <span class="project-tagline">Linux, Windows</span>
@@ -596,13 +599,13 @@ p {
                     <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Others</span>: <span class="project-tagline">Docker</span>
+                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes, Apache Kafka</span>
                 </div><!--//item-->
                 <div class="item">
                         <span class="project-title"><b>Others</b></span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Methodologies</span>: <span class="project-tagline">Agile Scrum, Kanban</span>
+                    <span class="skills-title company">Practises</span>: <span class="project-tagline">Agile Scrum, Kanban, Pair programming, TDD</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Payment Gateways</span>: <span class="project-tagline">CCAvenue, PayPal, Stripe, Wirecard</span>
@@ -617,7 +620,7 @@ p {
                     <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver</span>
+                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver, draw.io</span>
                 </div><!--//item-->
             </section><!--//section-->
             <section class="section projects-section">
