--- a/myresume.html
+++ b/myresume.html
@@ -507,32 +507,6 @@ p {
                 </div>  
             </section><!--//skills-section-->
             <br/>
-            <section class="skills-section section">
-                <h2 class="section-title"><i class="fa fa-certificate"></i>Certifications</h2>
-                <br/>
-                <div class="item">
-                    <img src="images/psmi.png" style="float: left" height="100px">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">PSM I</h3>
-                            <div class="time">Feb 1-2, 2020</div>
-                        </div>
-                        <div class="company">Scrum.org</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p><span class="project-title">Score:</span> 95%</p>
-                    </div><!--//details-->
-                    <div class="details">
-                        <p><span class="project-title">URL:</span>
-                            <a href="https://www.scrum.org/user/622804">https://www.scrum.org/user/622804</a>
-                        </p>
-                    </div><!--//details-->
-                    <div class="details">
-                        <p>The Professional Scrum Master I (PSM I) certification demonstrates a fundamental level of Scrum mastery. PSM I certificate holders prove that they understand Scrum as described in the Scrum Guide and how to apply Scrum in Scrum Teams.</p>
-                    </div><!--//details-->
-                </div><!--//item-->
-            </section><!--//skills-section-->
-            <br/>
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills Set</h2>
                 <!-- <div class="intro">
@@ -599,7 +573,7 @@ p {
                     <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes, Apache Kafka</span>
+                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes</span>
                 </div><!--//item-->
                 <div class="item">
                         <span class="project-title"><b>Others</b></span>
@@ -623,6 +597,32 @@ p {
                     <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver, draw.io</span>
                 </div><!--//item-->
             </section><!--//section-->
+            <section class="skills-section section">
+                <h2 class="section-title"><i class="fa fa-certificate"></i>Certifications</h2>
+                <br/>
+                <div class="item">
+                    <img src="images/psmi.png" style="float: left" height="100px">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">PSM I</h3>
+                            <div class="time">Feb 1-2, 2020</div>
+                        </div>
+                        <div class="company">Scrum.org</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p><span class="project-title">Score:</span> 95%</p>
+                    </div><!--//details-->
+                    <div class="details">
+                        <p><span class="project-title">URL:</span>
+                            <a href="https://www.scrum.org/user/622804">https://www.scrum.org/user/622804</a>
+                        </p>
+                    </div><!--//details-->
+                    <div class="details">
+                        <p>The Professional Scrum Master I (PSM I) certification demonstrates a fundamental level of Scrum mastery. PSM I certificate holders prove that they understand Scrum as described in the Scrum Guide and how to apply Scrum in Scrum Teams.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+            </section><!--//skills-section-->
+            <br/>
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-tasks"></i>Projects</h2>
                 <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
