--- a/myresume.html
+++ b/myresume.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
+    <meta name="description" content="Responsive HTML5 Resume/CV">
     <meta name="author" content="Uday Karkera at U Coder Karkera">
     <head>
     <link rel="icon" href="images/u.jpg" type="image/jpg" sizes="16x16">
