--- a/myresume.html
+++ b/myresume.html
@@ -528,7 +528,7 @@ p {
                     <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>: <span class="project-tagline">Blade, Twig, Mustache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Javascript Frameworks</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
+                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Design Patterns</span>: <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy, Command | (Structural) Adapter, Composite, Facade</span>
@@ -631,7 +631,8 @@ p {
                     <span class="project-tagline">AVADO Learning is a web and mobile-based platform that offers e-learning courses on marketing, human resource, accounting and leadership management. AVADO's headquarters is located in London.</span>
                     <ul>
                         <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
-                        <li>Implement Laravel features.</li>
+                        <li>Line Manage a team of developers and testers</li>
+                        <li>Implement Laravel/Symfony features.</li>
                         <li>Monitoring technical aspects of Avado</li>
                         <li>Scoping, Class Mapping, Code Reviews, Conducting Interviews</li>
                     </ul>
@@ -642,10 +643,11 @@ p {
                     <span class="project-tagline">PlatinumClubNet enables members of Platinum Clubs® of America and Platinum Clubs® of the World to engage, network and create new experiences, enhancing value, benefits and relationships.</span>
                     <ul>
                         <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
+                        <li>Line Manage teams of developers and testers</li>
                         <li>Implement Laravel features.</li>
-                        <li>Payment Gateway (Stripe)</li>
                         <li>Monitoring technical aspects of PlatinumClubNet</li>
-                        <li>Handling complete git processes</li>
+                        <li>Setup / Handling complete git processes</li>
+                        <li>Setup Http Authentication</li>
                     </ul>
                 </div><!--//item-->
                 <div class="item">
