--- a/myresume.html
+++ b/myresume.html
@@ -534,7 +534,7 @@ p {
                     <span class="skills-title company">Design Patterns</span>: <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy, Command | (Structural) Adapter, Composite, Facade</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, CSRF, XSS, SQL Injection, Error handling, etc.</span>
+                    <span class="skills-title company">Security</span>: <span class="project-tagline">CSRF, XSS, SQL Injection, Error handling, etc.</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation</span>
@@ -549,13 +549,13 @@ p {
                     <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes</span>
+                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes, Load Balancer (Traefik)</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Security</span>: <span class="project-tagline">DoS, DDos</span>
+                    <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, DoS, DDos</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Caching</span>: <span class="project-tagline">APC, Memcache, XCache, HTTP caching, Reverse proxy (Varnish)</span>
+                    <span class="skills-title company">Caching</span>: <span class="project-tagline">APC, Memcache, XCache, HTTP caching, Reverse proxy (Varnish, Cloudfare CDN)</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">VCS</span>: <span class="project-tagline">Git</span>
@@ -579,7 +579,7 @@ p {
                         <span class="project-title"><b>Others</b></span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Practises</span>: <span class="project-tagline">Agile Scrum, Kanban, Pair programming, TDD</span>
+                    <span class="skills-title company">Practises</span>: <span class="project-tagline">Agile Scrum, Kanban, Pair programming</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Payment Gateways</span>: <span class="project-tagline">CCAvenue, PayPal, Stripe, Wirecard</span>
