7 yrs exp freelaning

--- a/myresume.html
+++ b/myresume.html
@@ -332,7 +332,7 @@ p {
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>6.5+ Years Exp</h4>
+                <h4>7+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -404,7 +404,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 6.5 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>Software Engineer with more than 7 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -462,6 +462,15 @@ p {
                     </div><!--//meta-->
                     <div class="details">
                         <p>Medisurge Technologies Pvt Ltd is a digital health company with the objective of providing a single destination to users for all health care needs. Medisurge Technologies also markets its services as Top Doctors Online (TDO).</p>                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Web Developer</h3>
+                            <div class="time">Jul 2013 - Jan 2014</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Freelancing, Mumbai</div>
+                    </div><!--//meta-->
                 </div><!--//item-->
             </section><!--//section-->
             <section class="skills-section section">
@@ -542,6 +551,9 @@ p {
                 <div class="item">
                     <span class="project-title"><b>Architectural</b></span>
                 </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Practises</span>: <span class="project-tagline">Sharding, Scalability, Caching, Loadbalancing, Modularity, Indexing</span>
+                </div>
                 <div class="item">
                     <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL, Elasticsearch</span>
                 </div><!--//item-->
