New resume introduction

--- a/myresume.html
+++ b/myresume.html
@@ -331,8 +331,9 @@ p {
                 <!-- <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://media.licdn.com/dms/image/C5103AQFHWJRKQy1ttg/profile-displayphoto-shrink_200_200/0?e=1526810400&v=alpha&t=jn4N0dXA23ug508Es3AIyWlVauov61wIJfriL9AKxN4" alt=""> -->
                 <img style="height: 120px;width: 120px;border-radius: 30px;" src="https://udaykarkera.github.io/images/formal-2.jpg">
                 <h4>Uday Karkera</h4>
+                <h4>9+ Years Exp</h4>
+                <h3 class="tagline">Tech Lead / Advisor / Architect</h3>
                 <h3 class="tagline">Full Stack Developer</h3>
-                <h4>7+ Years Exp</h4>
             </div><!--//profile-container-->
 
             <div class="contact-container container-block">
@@ -404,7 +405,7 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Software Engineer with more than 7 years experience, specializing in back end development. Experienced with all stages of the development cycle for dynamic web projects. Look at myself as a Full Stack Developer, well-versed in numerous programming languages and also as time passes wish to be familiar with devops roles.</p>
+                    <p>A technical expert having worked on a number of technologies like Javascript, PHP, Postgres, MySQL etc and enhancing the use of these technologies by making use of powerful frameworks like Laravel, React’s NextJs to give a robust, secure, speedy and feature rich technical applications. On the devOps, managerial front make use of docker, git, JIRA, scrum, kanban, etc and help teams have convenience to work on a smooth platform. Last but not the least, with the help of AWS’s cloud services provide business a cost effective and optimized infrastructure.</p>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -412,8 +413,20 @@ p {
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
+                            <h3 class="job-title">Senior Software Engineer</h3>
+                            <div class="time">May 2021 - July 2022</div>
+                        </div>
+                        <div class="company">Civitas Learning (Edustream), Pune</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>The Civitas Learning Student Impact Platform provides the capabilities and intelligence needed to deliver multi-faceted, data-activated student impact strategies that improve student outcomes and build sustainable institutions.</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
                             <h3 class="job-title">Senior Software Engineer | Scrum Master</h3>
-                            <div class="time">Jul 2019 - Present</div>
+                            <div class="time">Jul 2019 - April 2021</div>
                         </div>
                         <div class="upper-row">
                             <h3 class="job-title">Senior Software Engineer</h3>
@@ -477,7 +490,7 @@ p {
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Top Skills &amp; Proficiency</h2>
                 <div class="skillset">        
                     <div class="item">
-                        <h3 class="level-title">PHP</h3><h3 class="level-title" style="width: 10%">8/10</h3>
+                        <h3 class="level-title">React</h3><h3 class="level-title" style="width: 10%">8/10</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="80%" style="width: 80%;">
                             </div>
@@ -499,7 +512,7 @@ p {
                     </div><!--//item-->
                     
                     <div class="item">
-                        <h3 class="level-title">HTML5 &amp; CSS</h3><h3 class="level-title" style="width: 10%">7/10</h3>
+                        <h3 class="level-title">Docker</h3><h3 class="level-title" style="width: 10%">7/10</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="70%" style="width: 70%;">
                             </div>                                      
@@ -513,6 +526,14 @@ p {
                             </div>                                      
                         </div><!--//level-bar-->                                 
                     </div><!--//item-->
+
+                    <div class="item">
+                        <h3 class="level-title">AWS</h3><h3 class="level-title" style="width: 10%">7/10</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%" style="width: 80%;">
+                            </div>
+                        </div><!--//level-bar-->
+                    </div><!--//item-->
                 </div>  
             </section><!--//skills-section-->
             <br/>
@@ -525,10 +546,10 @@ p {
                     <span class="project-title"><b>Programming</b></span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Practises</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization</span>
+                    <span class="skills-title company">Practises</span>: <span class="project-tagline">OOPs, SOLID Principles, Design Patterns, DB Normalization, Atomic Design Principle</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">CodeIgniter, Laravel, Symfony, Yii</span>
+                    <span class="skills-title company">PHP Backend Frameworks</span>: <span class="project-tagline">Laravel, Symfony, Yii</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">PHP Backend Micro Frameworks</span>: <span class="project-tagline">Lumen, Slim</span>
@@ -537,7 +558,13 @@ p {
                     <span class="skills-title company">PHP Frontend Frameworks / Templating Engines</span>: <span class="project-tagline">Blade, Twig, Mustache</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React, TypeScript</span>
+                    <span class="skills-title company">Javascript Frameworks / Libraries</span>: <span class="project-tagline">jQuery, React</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">React</span>: <span class="project-tagline">NextJs, Material UI</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">Package Managers</span>: <span class="project-tagline">composer, npm, yarn</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Design Patterns</span>: <span class="project-tagline">(Creational) Factory, Singleton | (Behavioral) Strategy, Command | (Structural) Adapter, Composite, Facade</span>
@@ -558,10 +585,10 @@ p {
                     <span class="skills-title company">Databases</span>: <span class="project-tagline">MySQL, PostgreSQL, Redis, MsSQL, Elasticsearch</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2 (Password Grant, Client Credentials), JWT, Http Auth</span>
+                    <span class="skills-title company">Authentication</span>: <span class="project-tagline">OAuth2, JWT, Http Auth</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes, Load Balancer (Traefik)</span>
+                    <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, DoS, DDos</span>
@@ -573,16 +600,10 @@ p {
                     <span class="skills-title company">VCS</span>: <span class="project-tagline">Git</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Queuing</span>: <span class="project-tagline">Gearman, RabbitMQ</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Web Services</span>: <span class="project-tagline">REST, SOAP, WSDL</span>
-                </div><!--//item-->
-                <div class="item">
                     <span class="skills-title company">Web Servers</span>: <span class="project-tagline">Apache, Nginx</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Operating System</span>: <span class="project-tagline">Linux, Windows</span>
+                    <span class="skills-title company">Operating System</span>: <span class="project-tagline">Linux, Windows, Mac</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Development Web Server</span>: <span class="project-tagline">LAMP, Vagrant, WAMP, XAMPP</span>
@@ -603,10 +624,7 @@ p {
                     <span class="skills-title company">IDE / Editor</span>: <span class="project-tagline">EmEditor, NetBeans, Nano, Notepad, Sublime Text, Vim, Visual Studio, PhpStorm</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="skills-title company">Push Notifications</span>: <span class="project-tagline">PushBots</span>
-                </div><!--//item-->
-                <div class="item">
-                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver, draw.io</span>
+                    <span class="skills-title company">Tools</span>: <span class="project-tagline">JIRA, diffuse, Csv, Excel, Meld, Word, phpMyAdmin, DBeaver, draw.io, Docker Desktop</span>
                 </div><!--//item-->
             </section><!--//section-->
             <section class="skills-section section">
@@ -637,6 +655,18 @@ p {
             <br/>
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-tasks"></i>Projects</h2>
+                <div class="company">Civitas Learning / Edustream Software Pvt. Ltd., Pune</div>
+                <div class="item">
+                    <span class="project-title"><a href="https://www.civitaslearning.com/" target="_blank">Civitas Learning</a></span>:
+                    <ul>
+                        <li>Maitainance &amp; Optimistation of the CMS and Apis</li>
+                        <li>Implement, Optmize React and Symfony features.</li>
+                        <li>Upgrading React 16 to 17 and Materail UI 4 to 5</li>
+                        <li>Webpack (Caching, Code Splitting, Multi Page Application)</li>
+                        <li>Zoom Video Calling Integration</li>
+                        <li>Yarn - maintaining, optimising package.json</li>
+                    </ul>
+                </div><!--//item-->
                 <div class="company">Blenheim Chalcot IT Services India Pvt. Ltd., Mumbai</div>
                 <div class="item">
                     <span class="project-title"><a href="https://platinumclubnet.com/" target="_blank">Avado</a></span>:
