Update resume : Add technical tasks section

--- a/myresume.html
+++ b/myresume.html
@@ -333,6 +333,9 @@ p {
                 <h4>Uday Karkera</h4>
                 <h4>9+ Years Exp</h4>
                 <h3 class="tagline">Tech Lead / Advisor / Architect</h3>
+                <br/>
+                <h3 class="tagline">Staff / Cloud Engineer</h3>
+                <br/>
                 <h3 class="tagline">Full Stack Developer</h3>
             </div><!--//profile-container-->
 
@@ -405,7 +408,14 @@ p {
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>A technical expert having worked on a number of technologies like Javascript, PHP, Postgres, MySQL etc and enhancing the use of these technologies by making use of powerful frameworks like Laravel, React’s NextJs to give a robust, secure, speedy and feature rich technical applications. On the devOps, managerial front make use of docker, git, JIRA, scrum, kanban, etc and help teams have convenience to work on a smooth platform. Last but not the least, with the help of AWS’s cloud services provide business a cost effective and optimized infrastructure.</p>
+                    <!-- <p>A technical expert having worked on a number of technologies like Javascript, PHP, Postgres, MySQL etc and enhancing the use of these technologies by making use of powerful frameworks like Laravel, React’s NextJs to give a robust, secure, speedy and feature rich technical applications. On the devOps, managerial front make use of docker, git, JIRA, scrum, kanban, etc and help teams have convenience to work on a smooth platform. Last but not the least, with the help of AWS’s cloud services provide business a cost effective and optimized infrastructure.</p> -->
+                    <p>A technical expert in areas of softwares</p>
+                    <ul>
+                        <li>Having worked on number of programming languages like JavaScript, PHP, etc. and databases like PostgreSQL, MySQL.</li>
+                        <li>Boost the power of technologies by making use of powerful frameworks like Laravel, React’s NextJs to give a robust, secure, speedy and feature rich technical applications.</li>
+                        <li>On the devOps, managerial front make use of docker, git, JIRA, scrum, kanban, etc and help teams have convenience to work on a smooth platform.</li>
+                        <li>Last but not the least, with the help of AWS’s cloud services provide business a cost effective and optimized infrastructure.</li>
+                    </ul>
                 </div><!--//summary-->
             </section><!--//section-->
             <section class="section experiences-section">
@@ -532,7 +542,7 @@ p {
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="70%" style="width: 80%;">
                             </div>
-                        </div><!--//level-bar-->
+                        </div><!--//level-bar-->                                 
                     </div><!--//item-->
                 </div>  
             </section><!--//skills-section-->
@@ -576,7 +586,7 @@ p {
                     <span class="skills-title company">Others</span>: <span class="project-tagline">AJAX, Bootstrap, JSON, W3C Markup Validation</span>
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title"><b>Architectural</b></span>
+                    <span class="project-title"><b>Architectural / Infrastructure</b></span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Practises</span>: <span class="project-tagline">Sharding, Scalability, Caching, Loadbalancing, Modularity, Indexing</span>
@@ -589,6 +599,9 @@ p {
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Services</span>: <span class="project-tagline">Docker, Kubernetes</span>
+                </div><!--//item-->
+                <div class="item">
+                    <span class="skills-title company">AWS</span>: <span class="project-tagline">IAM, Beanstalk, CloudFormation, Cloud9, ECS</span>
                 </div><!--//item-->
                 <div class="item">
                     <span class="skills-title company">Security</span>: <span class="project-tagline">OWASP, DoS, DDos</span>
@@ -653,6 +666,21 @@ p {
                 </div><!--//item-->
             </section><!--//skills-section-->
             <br/>
+            <section class="section projects-section">
+                <h2 class="section-title"><i class="fa fa-tasks"></i>Technical Tasks</h2>
+                <div class="item">
+                    <ul>
+                        <li>Building Laravel project from scratch</li>
+                        <li>Upgrading React 16 to 17, Materail UI 4 to 5</li>
+                        <li>Introducing processes like scrum and kanban</li>
+                        <li>Splitting huge bundle of code with Webpack's Code Splitting</li>
+                        <li>Integrating Zoom Video Calling using their OAuth2 services and using Dependency Injection, OOPs to manage their resources at backend</li>
+                        <li>Implementing security features following OWASP</li>
+                        <li>Managing coding standards with code reviews, appling PSR standards, maintaining Definition of done</li>
+                        <li>Hold regular training sessions on security, best practises, upgrading applications, coding solutions, etc. to keep the team updated with the latest upgrades, skills.</li>
+                    </ul>
+                </div><!--//item-->
+            </section>
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-tasks"></i>Projects</h2>
                 <div class="company">Civitas Learning / Edustream Software Pvt. Ltd., Pune</div>
