Update resume : add nextjs

--- a/myresume.html
+++ b/myresume.html
@@ -670,7 +670,7 @@ p {
                 <h2 class="section-title"><i class="fa fa-tasks"></i>Technical Tasks</h2>
                 <div class="item">
                     <ul>
-                        <li>Building Laravel project from scratch</li>
+                        <li>Building Laravel, NextJs project from scratch</li>
                         <li>Upgrading React 16 to 17, Materail UI 4 to 5</li>
                         <li>Introducing processes like scrum and kanban</li>
                         <li>Splitting huge bundle of code with Webpack's Code Splitting</li>
